--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node app.js",
     "commit": "git commit -am \"make it better\"",
+    "push": "git push heroku master",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
