--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT = 8080
-MONGO_URL = mongodb+srv://Lesnov:Rjyrehtywbz1772903@cluster0.vuf41.mongodb.net/?retryWrites=true&w=majority
+MONGO_URL = mongodb+srv://Lesnov:Rjyrehtywbz1772903@cluster0.vuf41.mongodb.net/NAT?retryWrites=true&w=majority
