--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT = 8080
 JWT_SECRET = Rjyrehtywbz1772903
-MONGO_URL = mongodb+srv://Lesnov:Rjyrehtywbz1772903@cluster0.vuf41.mongodb.net/NAT?retryWrites=true&w=majority
+MONGO_URL = mongodb+srv://Lesnov:Rjyrehtywbz1772903@cluster0.vuf41.mongodb.net/Import?retryWrites=true&w=majority
